Add ability to disable commands on servers